--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&family=Space+Grotesk:wght@300..700&display=swap");
-
 :root {
   --primary: #2b74ff;
   --secondary: #fee117;
@@ -15,3 +14,46 @@ body {
   background-color: var(--primary);
   background-image: url(./images/hero-shape.png);
 }
+
+.nav-box {
+  position: absolute;
+  top: 5%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.nms-nav {
+  background-color: white;
+  border-radius: 50px;
+}
+
+.navbar-brand {
+  padding: 0;
+}
+
+.brand-logo {
+  width: 140px;
+  padding: 5px 0;
+  border-radius: 50px;
+  background-color: var(--primary);
+  background-image: url(./images/wave.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 28px;
+  font-weight: 800;
+  color: white;
+  margin: 2px 0;
+}
+
+.nav-item {
+  text-transform: uppercase;
+  font-weight: 500;
+}
+
+.navbar-nav .nav-link.active,
+.navbar-nav .nav-link.show {
+  color: var(--primary);
+}/*# sourceMappingURL=style.css.map */
