--- a/style.css
+++ b/style.css
@@ -131,6 +131,11 @@ body {
   font-weight: 800;
   color: var(--primary);
 }
+.req-content .req {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 .req-content .req div {
   display: flex;
   gap: 10px;
