--- a/style.css
+++ b/style.css
@@ -134,7 +134,6 @@ body {
 .req-content .req {
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
 .req-content .req div {
   display: flex;
@@ -146,4 +145,15 @@ body {
 }
 .req-content .req img {
   width: 60px;
+}
+.req-content .req-caution {
+  display: flex;
+  background-color: rgba(254, 225, 23, 0.2);
+  padding: 10px;
+  border-radius: 10px;
+}
+.req-content .req-caution img {
+  width: 50px;
+  height: 50px;
+  opacity: 0.6;
 }/*# sourceMappingURL=style.css.map */
